--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Felipe Gambini</title>
 </head>
 <body>
     <h1>Minhas redes sociais</h1>
     <hr>
     <h2>Quem sou eu?</h2>
-    <img src="imagens/foto2-felipe-150.png" alt="Foto de perfil Felipe">
+    <img src="imagens/foto2-felipe-150.png" alt="Foto de perfil Felipe" class="profile">
     <p>Meu nome é <strong>Felipe Quaglia Gambini</strong>, sou estudante do 4º ano de Administração da Univesidade Estadual de Maringá e Analista de Dados Administrativos na <a href="https://crefaz.com.br" target="_blank" rel="external">Crefaz</a>, uma empresa de microcrédito fundada em 2013, no setor de Inteligência de Negócios, onde analisamos todas as informações possíveis para a tomada de decisão correta. Gosto muito de programação, atualmente estou aprendendo Python, HTML, CSS e JavaScript.</p>
     <h2>Como falar comigo?</h2>
     <ul>
