--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
     <title>Felipe Gambini</title>
 </head>
 <body>
-    <h1>Minhas redes sociais</h1>
-    <hr>
-    <h2>Quem sou eu?</h2>
-    <img src="imagens/foto2-felipe-150.png" alt="Foto de perfil Felipe" class="profile">
-    <p>Meu nome é <strong>Felipe Quaglia Gambini</strong>, sou estudante do 4º ano de Administração da Univesidade Estadual de Maringá e Analista de Dados Administrativos na <a href="https://crefaz.com.br" target="_blank" rel="external">Crefaz</a>, uma empresa de microcrédito fundada em 2013, no setor de Inteligência de Negócios, onde analisamos todas as informações possíveis para a tomada de decisão correta. Gosto muito de programação, atualmente estou aprendendo Python, HTML, CSS e JavaScript.</p>
-    <h2>Como falar comigo?</h2>
-    <ul>
-        <li><img src="imagens/icone-github.png" alt="icone-github"><a href="https://github.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no GitHub</li>
-        <li><img src="imagens/icone-instagram.png" alt="icone-instagram"><a href="https://instagram.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no Instagram</li>
-        <li><img src="imagens/icone-linkedin.png" alt="icone-linkedin"><a href="https://www.linkedin.com/in/felipegambini/" target="_blank" rel="external">/felipegambini</a> - Meu perfil no LinkedIn</li>
-        <li><img src="imagens/icone-twitter.png" alt="icone-twitter"><a href="https://twitter.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no Twitter</li>
-        <li><img src="imagens/icone-facebook.png" alt="icone-facebook"><a href="https://www.facebook.com/felipe.gambini.90" target="_blank" rel="external">/felipe.gambini.90</a> - Meu perfil no Facebook</li>
-    </ul>
+    <main>
+        <h1>Felipe Quaglia Gambini</h1>
+        <hr>
+        <h2>Quem sou eu?</h2>
+        <img src="imagens/foto2-felipe-150.png" alt="Foto de perfil Felipe" class="profile">
+        <p>Meu nome é <strong>Felipe Quaglia Gambini</strong>, sou estudante do 4º ano de Administração da Univesidade Estadual de Maringá e Analista de Dados Administrativos na <a href="https://crefaz.com.br" target="_blank" rel="external">Crefaz</a>, uma empresa de microcrédito fundada em 2013, no setor de Inteligência de Negócios, onde analisamos todas as informações possíveis para a tomada de decisão correta. Gosto muito de programação, atualmente estou aprendendo Python, HTML, CSS e JavaScript.</p>
+        <h2>Como falar comigo?</h2>
+        <ul>
+            <li><img src="imagens/icone-github.png" alt="icone-github"><a href="https://github.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no GitHub</li>
+            <li><img src="imagens/icone-instagram.png" alt="icone-instagram"><a href="https://instagram.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no Instagram</li>
+            <li><img src="imagens/icone-linkedin.png" alt="icone-linkedin"><a href="https://www.linkedin.com/in/felipegambini/" target="_blank" rel="external">/felipegambini</a> - Meu perfil no LinkedIn</li>
+            <li><img src="imagens/icone-twitter.png" alt="icone-twitter"><a href="https://twitter.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no Twitter</li>
+            <li><img src="imagens/icone-facebook.png" alt="icone-facebook"><a href="https://www.facebook.com/felipe.gambini.90" target="_blank" rel="external">/felipe.gambini.90</a> - Meu perfil no Facebook</li>
+        </ul>
+    </main>
 </body>
 </html>
