--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <hr>
         <h2>Quem sou eu?</h2>
         <img src="imagens/foto2-felipe-150.png" alt="Foto de perfil Felipe" class="profile">
-        <p>Meu nome é <strong>Felipe Quaglia Gambini</strong>, sou estudante do 4º ano de Administração da Univesidade Estadual de Maringá e Analista de Dados Administrativos na <a href="https://crefaz.com.br" target="_blank" rel="external">Crefaz</a>, uma empresa de microcrédito fundada em 2013, no setor de Inteligência de Negócios, onde analisamos todas as informações possíveis para a tomada de decisão correta. Gosto muito de programação, atualmente estou aprendendo Python, HTML, CSS e JavaScript.</p>
+        <p>Meu nome é <strong>Felipe Quaglia Gambini</strong>. Sou estudante do 4º ano de Administração da Univesidade Estadual de Maringá e Analista de Dados Administrativos no setor de Inteligência de Negócios na <a href="https://crefaz.com.br" target="_blank" rel="external">Crefaz</a>, uma empresa de empréstimos e financiamentos fundada em 2013. Gosto muito de programação, e atualmente estou aprendendo Python, HTML, CSS e JavaScript.</p>
         <h2>Como falar comigo?</h2>
         <ul>
             <li><img src="imagens/icone-github.png" alt="icone-github"><a href="https://github.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no GitHub</li>
