--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <img src="imagens/foto2-felipe-150.png" alt="Foto de perfil Felipe" class="profile">
         <p>Meu nome é <strong>Felipe Quaglia Gambini</strong>. Sou estudante do 4º ano de Administração da Univesidade Estadual de Maringá e Analista de Dados Administrativos no setor de Inteligência de Negócios na <a href="https://crefaz.com.br" target="_blank" rel="external">Crefaz</a>, uma empresa de empréstimos e financiamentos fundada em 2013. Gosto muito de programação, e atualmente estou aprendendo Python, HTML, CSS e JavaScript.</p>
         <h2>Como falar comigo?</h2>
-        <ul>
-            <li><img src="imagens/icone-github.png" alt="icone-github"><a href="https://github.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no GitHub</li>
-            <li><img src="imagens/icone-instagram.png" alt="icone-instagram"><a href="https://instagram.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no Instagram</li>
-            <li><img src="imagens/icone-linkedin.png" alt="icone-linkedin"><a href="https://www.linkedin.com/in/felipegambini/" target="_blank" rel="external">/felipegambini</a> - Meu perfil no LinkedIn</li>
-            <li><img src="imagens/icone-twitter.png" alt="icone-twitter"><a href="https://twitter.com/felipegambini" target="_blank" rel="external">/felipegambini</a> - Meu perfil no Twitter</li>
-            <li><img src="imagens/icone-facebook.png" alt="icone-facebook"><a href="https://www.facebook.com/felipe.gambini.90" target="_blank" rel="external">/felipe.gambini.90</a> - Meu perfil no Facebook</li>
+        <ul type="square">
+            <li><a href="https://github.com/felipegambini" target="_blank" rel="external"><img src="imagens/icone-github.png" alt="icone-github"></a> - GitHub</li>
+            <li><a href="https://instagram.com/felipegambini" target="_blank" rel="external"><img src="imagens/icone-instagram.png" alt="icone-instagram"></a> - Instagram</li>
+            <li><a href="https://www.linkedin.com/in/felipegambini/" target="_blank" rel="external"><img src="imagens/icone-linkedin.png" alt="icone-linkedin"></a> - LinkedIn</li>
+            <li><a href="https://twitter.com/felipegambini" target="_blank" rel="external"><img src="imagens/icone-twitter.png" alt="icone-twitter"></a> - Twitter</li>
+            <li><a href="https://www.facebook.com/felipe.gambini.90" target="_blank" rel="external"><img src="imagens/icone-facebook.png" alt="icone-facebook"></a> - Facebook</li>
         </ul>
     </main>
 </body>
