--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <title>Felipe Gambini</title>
 </head>
 <body>
-    <main>
+    <header>
         <h1>Felipe Quaglia Gambini</h1>
-        <hr>
+    </header>
+    <main>
         <h2>Quem sou eu?</h2>
         <img src="imagens/foto2-felipe-150.png" alt="Foto de perfil Felipe" class="profile">
         <p>Meu nome é <span class="name">Felipe Quaglia Gambini</span>. Sou estudante do 4º ano de Administração da Univesidade Estadual de Maringá e Analista de Dados Administrativos no setor de Inteligência de Negócios na <a class="crefaz" href="https://crefaz.com.br" target="_blank" rel="external">Crefaz</a>, uma empresa de empréstimos e financiamentos fundada em 2013. Gosto muito de programação, e atualmente estou aprendendo Python, HTML, CSS e JavaScript.</p>
