--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
     </header>
     <main>
         <h2>Quem sou eu?</h2>
-        <img src="imagens/foto2-felipe-150.png" alt="Foto de perfil Felipe" class="profile">
+        <img src="imagens/foto2-felipe-150.png" alt="Foto de perfil Felipe" class="profile circle">
+        <div class="infos">
+            <p> <img src="imagens/birth.png" alt="nascimento">20/04/2000</p>
+            <p><img src="imagens/phone.png" alt="telefone"></img>(44) 9 9131-5400</p>
+            <p><img src="imagens/gmail.png" alt="email">skamaringa@gmail.com</p>
+        </div>
         <p>Meu nome é <span class="name">Felipe Quaglia Gambini</span>. Sou estudante do 4º ano de Administração da Univesidade Estadual de Maringá e Analista de Dados Administrativos no setor de Inteligência de Negócios na <a class="crefaz" href="https://crefaz.com.br" target="_blank" rel="external">Crefaz</a>, uma empresa de empréstimos e financiamentos fundada em 2013. Gosto muito de programação, e atualmente estou aprendendo Python, HTML, CSS e JavaScript.</p>
         <h2>Como falar comigo?</h2>
         <div class="sociais">
-                <p class="links"><a href="https://github.com/felipegambini" target="_blank" rel="external"><img src="imagens/icone-github.png" alt="icone-github"> - GitHub</a></p>
-                <p class="links"><a href="https://instagram.com/felipegambini" target="_blank" rel="external"><img src="imagens/icone-instagram.png" alt="icone-instagram"> - Instagram</a></p>
-                <p class="links"><a href="https://www.linkedin.com/in/felipegambini/" target="_blank" rel="external"><img src="imagens/icone-linkedin.png" alt="icone-linkedin"> - LinkedIn</a></p>
-                <p class="links"><a href="https://twitter.com/felipegambini" target="_blank" rel="external"><img src="imagens/icone-twitter.png" alt="icone-twitter"> - Twitter</a></p>
-                <p class="links"><a href="https://www.facebook.com/felipe.gambini.90" target="_blank" rel="external"><img src="imagens/icone-facebook.png" alt="icone-facebook"> - Facebook</a></p>
+                <p class="links"><a href="https://github.com/felipegambini" target="_blank" rel="external"><img src="imagens/icone-github.png" alt="icone-github" class="circle"> - GitHub</a></p>
+                <p class="links"><a href="https://instagram.com/felipegambini" target="_blank" rel="external"><img src="imagens/icone-instagram.png" alt="icone-instagram" class="circle"> - Instagram</a></p>
+                <p class="links"><a href="https://www.linkedin.com/in/felipegambini/" target="_blank" rel="external"><img src="imagens/icone-linkedin.png" alt="icone-linkedin" class="circle"> - LinkedIn</a></p>
+                <p class="links"><a href="https://twitter.com/felipegambini" target="_blank" rel="external"><img src="imagens/icone-twitter.png" alt="icone-twitter" class="circle"> - Twitter</a></p>
+                <p class="links"><a href="https://www.facebook.com/felipe.gambini.90" target="_blank" rel="external"><img src="imagens/icone-facebook.png" alt="icone-facebook" class="circle"> - Facebook</a></p>
         </div>
         <p id="mark">Desenvolvido por Felipe Quaglia Gambini</p>
     </main>
