--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Felipe Quaglia Gambini</h1>
+        <h1>FELIPE QUAGLIA GAMBINI</h1>
     </header>
     <main>
         <h2>Quem sou eu?</h2>
