--- a/index.html
+++ b/index.html
@@ -64,10 +64,30 @@
             <p>Hoje, grande parte do meu conhecimento é voltado para análise e tratamento de dados com pandas e duckdb. Mas já tive muita experiência com vários recursos que o python oferece (Flask, WebScraping, automação de tarefas, requests, TKinter e PySimpleGUI, REST APIs, ML).</p>
         </section>
 
-        <h2>Skills</h2>
-        <h2>Experiências</h2>
-        <h2>Portifólio</h2>
-        <h2>Contato</h2>
+        <div class="container">
+            <h2>Skills</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi molestiae ullam quibusdam nemo, quae obcaecati quis amet impedit mollitia? Laudantium vel commodi odio distinctio, ipsam molestiae? Dolore eaque accusamus illum.</p>
+        </div>
+        <div class="container">
+            <h2>Experiências</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam illo dolore eaque libero eum soluta possimus voluptate reprehenderit. Dolore consequatur eligendi ut repellendus ad. Voluptatem, officia. Facilis eius blanditiis velit!]</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
+        </div>
+        <div class="container">
+            <h2>Portifólio</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam dolorem consectetur voluptate atque ratione qui deserunt corrupti doloribus sint velit! Ipsam voluptatem quisquam tempora minus sapiente quae quis tempore possimus.</p>
+        </div>
+        <div class="container">
+            <h2>Contato</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto inventore atque sunt porro molestias dicta dolorum, sequi perspiciatis hic soluta quae temporibus voluptates odit impedit non ut. Necessitatibus, deleniti maxime?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
+        </div>
 
     </main>
     <footer>
