--- a/index.html
+++ b/index.html
@@ -42,44 +42,45 @@
         </div>
         <nav>
             <ul class="navbar" >
-                <li><a href="#"><i class="fa fa-user-o" aria-hidden="true"></i> Sobre</a></li>
-                <li><a href="#"><i class="fa fa-code" aria-hidden="true"></i> Skills</a></li>
-                <li><a href="#"><i class="fa fa-bookmark-o" aria-hidden="true"></i> Experiências</a></li>
-                <li><a href="#"><i class="fa fa-file-text-o" aria-hidden="true"></i> Portifólio</a></li>
-                <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Contato</a></li>
+                <li><a href="#sobre"><i class="fa fa-user-o" aria-hidden="true"></i> Sobre</a></li>
+                <li><a href="#skills"><i class="fa fa-code" aria-hidden="true"></i> Skills</a></li>
+                <li><a href="#experiencias"><i class="fa fa-bookmark-o" aria-hidden="true"></i> Experiências</a></li>
+                <li><a href="#portifolio"><i class="fa fa-file-text-o" aria-hidden="true"></i> Portifólio</a></li>
+                <li><a href="#contato"><i class="fa fa-phone" aria-hidden="true"></i> Contato</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Sobre</h2>
-
-        <section>
-            <p>Atualmente sou Analista de Dados Senior em uma financeira.</p>
-            <p>Tenho 4 anos de experiência com Power BI, DAX avançado e Excel avançado;</p>
-            <p>Um pouco mais de 3 anos de experiência em python;</p>
-            <p>Em torno de 1 ano e meio de experiência em SQL.</p>
-            <p>Por ter pouco acesso aos bancos de dados na empresa, no inicio realizava o ETL no próprio power query, ao longo do tempo migrei tudo para python para melhorar a performance do ETL e dos painéis. Agora com mais abertura aos bancos, também utilizo muito para consulta e para construção de aplicações com dados quase em tempo real.</p>
-            <p>Comecei a estudar Git junto com Python e hoje utilizo muito no meu dia a dia para versionamento e colaboração de código, aprendi Git tanto em CLI quanto por interface do GitHub Desktop, sou fascinado pela documentações tanto do Git quanto Python e de outras ferramentas.</p>
-            <p>Comecei aprendendo Python para automação de processos, e após para tratamento de dados.</p>
-            <p>Hoje, grande parte do meu conhecimento é voltado para análise e tratamento de dados com pandas e duckdb. Mas já tive muita experiência com vários recursos que o python oferece (Flask, WebScraping, automação de tarefas, requests, TKinter e PySimpleGUI, REST APIs, ML).</p>
-        </section>
+        <div class="container">
+            <h2 id="sobre">Sobre</h2>
+            <section>
+                <p>Atualmente sou Analista de Dados Senior em uma financeira.</p>
+                <p>Tenho 4 anos de experiência com Power BI, DAX avançado e Excel avançado;</p>
+                <p>Um pouco mais de 3 anos de experiência em python;</p>
+                <p>Em torno de 1 ano e meio de experiência em SQL.</p>
+                <p>Por ter pouco acesso aos bancos de dados na empresa, no inicio realizava o ETL no próprio power query, ao longo do tempo migrei tudo para python para melhorar a performance do ETL e dos painéis. Agora com mais abertura aos bancos, também utilizo muito para consulta e para construção de aplicações com dados quase em tempo real.</p>
+                <p>Comecei a estudar Git junto com Python e hoje utilizo muito no meu dia a dia para versionamento e colaboração de código, aprendi Git tanto em CLI quanto por interface do GitHub Desktop, sou fascinado pela documentações tanto do Git quanto Python e de outras ferramentas.</p>
+                <p>Comecei aprendendo Python para automação de processos, e após para tratamento de dados.</p>
+                <p>Hoje, grande parte do meu conhecimento é voltado para análise e tratamento de dados com pandas e duckdb. Mas já tive muita experiência com vários recursos que o python oferece (Flask, WebScraping, automação de tarefas, requests, TKinter e PySimpleGUI, REST APIs, ML).</p>
+            </section>
+        </div>
 
         <div class="container">
-            <h2>Skills</h2>
+            <h2 id="skills">Skills</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi molestiae ullam quibusdam nemo, quae obcaecati quis amet impedit mollitia? Laudantium vel commodi odio distinctio, ipsam molestiae? Dolore eaque accusamus illum.</p>
         </div>
         <div class="container">
-            <h2>Experiências</h2>
+            <h2 id="experiencias">Experiências</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam illo dolore eaque libero eum soluta possimus voluptate reprehenderit. Dolore consequatur eligendi ut repellendus ad. Voluptatem, officia. Facilis eius blanditiis velit!]</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
         </div>
         <div class="container">
-            <h2>Portifólio</h2>
+            <h2 id="portifolio">Portifólio</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam dolorem consectetur voluptate atque ratione qui deserunt corrupti doloribus sint velit! Ipsam voluptatem quisquam tempora minus sapiente quae quis tempore possimus.</p>
         </div>
         <div class="container">
-            <h2>Contato</h2>
+            <h2 id="contato">Contato</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto inventore atque sunt porro molestias dicta dolorum, sequi perspiciatis hic soluta quae temporibus voluptates odit impedit non ut. Necessitatibus, deleniti maxime?</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
