--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 <li><a href="#sobre"><i class="fa fa-user-o" aria-hidden="true"></i> Sobre</a></li>
                 <li><a href="#skills"><i class="fa fa-code" aria-hidden="true"></i> Skills</a></li>
                 <li><a href="#experiencias"><i class="fa fa-bookmark-o" aria-hidden="true"></i> Experiências</a></li>
+                <li><a href="#formacao"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Formação</a></li>
                 <li><a href="#portifolio"><i class="fa fa-file-text-o" aria-hidden="true"></i> Portifólio</a></li>
+                <li><a href="#certificados"><i class="fa fa-certificate" aria-hidden="true"></i> Certificados</a></li>
                 <li><a href="#contato"><i class="fa fa-phone" aria-hidden="true"></i> Contato</a></li>
             </ul>
         </nav>
@@ -67,27 +69,181 @@
 
         <div class="container">
             <h2 id="skills">Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi molestiae ullam quibusdam nemo, quae obcaecati quis amet impedit mollitia? Laudantium vel commodi odio distinctio, ipsam molestiae? Dolore eaque accusamus illum.</p>
+            <ul>
+                <li>Python</li>
+                <li>Power BI</li>
+                <li>DAX</li>
+                <li>Flask</li>
+                <li>SQL</li>
+                <li>Git e GitHub</li>
+                <li>WebScraping</li>
+                <li>APIs</li>
+                <li>Pandas (Python)</li>
+            </ul>
         </div>
         <div class="container">
             <h2 id="experiencias">Experiências</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam illo dolore eaque libero eum soluta possimus voluptate reprehenderit. Dolore consequatur eligendi ut repellendus ad. Voluptatem, officia. Facilis eius blanditiis velit!]</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
+            <div class="workExperience">
+                <ul>
+                    <li>
+                      <div class="jobPosition">
+                        <span class="bolded">
+                            Analista de Dados Sênior
+                        </span>
+                        <div>
+                            <small>
+                              Jan 2024 - Presente
+                            </small>
+                        </div>
+                      </div>
+                      <div class="projectName">
+                        <span>
+                          Crefaz
+                        </span>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="jobPosition">
+                        <span class="bolded">
+                            Analista de Dados Pleno
+                        </span>
+                        <div>
+                            <small>
+                              Jan 2023 - Dez 2024 (1 ano e 1 mês)
+                            </small>
+                        </div>
+                      </div>
+                      <div class="projectName">
+                        <span>
+                          Crefaz
+                        </span>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="jobPosition">
+                        <span class="bolded">
+                          Analista de Dados Junior II
+                        </span>
+                        <div>
+                            <small>
+                              Jan 2022 - Dez 2022 (1 ano)
+                            </small>
+                        </div>
+                      </div>
+                      <div class="projectName">
+                        <span>
+                          Crefaz
+                        </span>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="jobPosition">
+                        <span class="bolded">
+                          Analista de Dados Junior I
+                        </span>
+                        <div>
+                            <small>
+                              Fev 2021 - Dez 2021 (11 meses)
+                            </small>
+                        </div>
+                      </div>
+                      <div class="projectName">
+                        <span>
+                          Crefaz
+                        </span>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="jobPosition">
+                        <span class="bolded">
+                          Assistente de Dados
+                        </span>
+                        <div>
+                            <small>
+                              Out 2020 - Jan 2021 (4 meses)
+                            </small>
+                        </div>
+                      </div>
+                      <div class="projectName">
+                        <span>
+                          Crefaz
+                        </span>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="jobPosition">
+                        <span class="bolded">
+                          Estagiário
+                        </span>
+                        <div>
+                            <small>
+                              Mai 2019 - Set 2020 (1 ano e 5 meses)
+                            </small>
+                        </div>
+                      </div>
+                      <div class="projectName">
+                        <span>
+                            Receita Estadual do Paraná
+                        </span>
+                      </div>
+                      <div class="jobDescription">
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum mollitia quasi inventore architecto maxime, suscipit officia dolor modi rem? Expedita excepturi ut quia ea. Impedit placeat velit consectetur neque unde!</p>
+                          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam itaque officiis distinctio earum omnis nesciunt, neque totam magnam ab animi reiciendis suscipit. Tempora natus aliquid eum quisquam accusantium consectetur vero!</p>
+                          <ul>
+                            <li>Skill</li>
+                            <li>SkillX</li>
+                            <li>Skilly</li>
+                          </ul>
+                          <p><strong>Skills: </strong>Aprendi X, Y, Z</p>
+                      </div>
+                    </li>
+                  </ul>
+            </div>
+        </div>
+        <div class="container">
+            <h2 id="formacao">Formação</h2>
+            <div class="workExperience">
+                <ul>
+                    <li>
+                      <div class="jobPosition">
+                        <span class="bolded">
+                            Universidade Estadual de Maringá
+                        </span>
+                        <div>
+                            <small>
+                              2018 - 2024
+                            </small>
+                        </div>
+                      </div>
+                      <div class="projectName">
+                        <span>
+                          Administração
+                        </span>
+                      </div>
+                    </li>
+                  </ul>
+            </div>
         </div>
         <div class="container">
             <h2 id="portifolio">Portifólio</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam dolorem consectetur voluptate atque ratione qui deserunt corrupti doloribus sint velit! Ipsam voluptatem quisquam tempora minus sapiente quae quis tempore possimus.</p>
+        </div>
+        <div class="container">
+            <h2 id="certificados">Licenças e Certificados</h2>
+            <section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod sapiente voluptas nulla deleniti amet illo laudantium assumenda, corporis, alias ipsa fugit harum? Praesentium quo perspiciatis reiciendis, odit vitae deserunt aspernatur?</p>
+            </section>
         </div>
         <div class="container">
             <h2 id="contato">Contato</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto inventore atque sunt porro molestias dicta dolorum, sequi perspiciatis hic soluta quae temporibus voluptates odit impedit non ut. Necessitatibus, deleniti maxime?</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
+            <section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto inventore atque sunt porro molestias dicta dolorum, sequi perspiciatis hic soluta quae temporibus voluptates odit impedit non ut. Necessitatibus, deleniti maxime?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
+            </section>
         </div>
 
     </main>
