--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <li>WebScraping</li>
                 <li>APIs</li>
                 <li>Pandas (Python)</li>
+                <li>Scrum</li>
             </ul>
         </div>
         <div class="container">
@@ -229,9 +230,64 @@
         </div>
         <div class="container">
             <h2 id="certificados">Licenças e Certificados</h2>
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod sapiente voluptas nulla deleniti amet illo laudantium assumenda, corporis, alias ipsa fugit harum? Praesentium quo perspiciatis reiciendis, odit vitae deserunt aspernatur?</p>
-            </section>
+                <div class="card-group">
+                    <div class="card">
+                        <img src="imagens/Certificados/Pandas.jpg" alt="Card image cap">
+                        <div>
+                            <h4>Data Analysis with Pandas</h4>
+                            <p>Udemy</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/Scrum.jpg" alt="Card image cap">
+                        <div>
+                            <h4>Gestão Ágil com Scrum</h4>
+                            <p>Udemy</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/Imersao_avacada_xperiun.png" alt="Card image cap">
+                        <div>
+                            <h4>Imersão Avançada</h4>
+                            <p>Xperiun</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/versionamento_git_github.png" alt="Card image cap">
+                        <div>
+                            <h4>Versionamento de Código com Git e GitHub</h4>
+                            <p>DIO</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/tecnicas_avancadas_python.png" alt="Card image cap">
+                        <div>
+                            <h4>Técnicas Avançadas de Python</h4>
+                            <p>LinkedIn</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/fundamentos_analise_dados.png" alt="Card image cap">
+                        <div>
+                            <h4>Fundamentos para Análise de Dados por Microsoft e LinkedIn</h4>
+                            <p>LinkedIn | Microsoft</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/Power_BI_Crefaz.png" alt="Card image cap">
+                        <div>
+                            <h4>Power BI - Report Designer</h4>
+                            <p>Crefaz</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/Python_basic_hackerhank.png" alt="Card image cap">
+                        <div>
+                            <h4>Python (Basic)</h4>
+                            <p>HackerHank</p>
+                        </div>
+                    </div>
+                </div>
         </div>
         <div class="container">
             <h2 id="contato">Contato</h2>
